Amélioration du code avec des logging 2